// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should render Big Icon same with snapshot 1`] = `
.c0 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: absolute;
}

<div>
  <div
    class="c0"
  >
    <img
      alt="icon"
    />
    <img
      alt=""
      class="c1"
      src="https://store-6-bucket.s3.ap-northeast-2.amazonaws.com/common/small-icon/circle.svg"
    />
  </div>
</div>
`;

exports[`<Icon /> should render Small Icon same with snapshot 1`] = `
.c0 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: absolute;
}

<div>
  <div
    class="c0"
  >
    <img
      alt="icon"
      src="https://store-6-bucket.s3.ap-northeast-2.amazonaws.com/common/small-icon/gift.svg"
    />
    <img
      alt=""
      class="c1"
      src="https://store-6-bucket.s3.ap-northeast-2.amazonaws.com/common/small-icon/circle.svg"
    />
  </div>
</div>
`;
